feat: memberinfo update